--- a/index.html
+++ b/index.html
@@ -3,23 +3,30 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta http-equiv="content-language" content="it">
+	<meta name="viewport"
+		content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0, shrink-to-fit=no">
+	<meta name="author" content="xxx" />
+	<meta name="description"
+		content="Costaamadi - Dove la passione per il vino si intreccia con la magia delle colline del prosecco" />
+	<meta property="og:title" content="Costaamadi" />
+	<meta property="og:image" content="images/preview.png" />
 	<title>Costamadi</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
-
-
-	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-
+	<link rel="apple-touch-icon" sizes="180x180" href="icon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="icon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="icon/favicon-16x16.png">
+	<link rel="manifest" href="icon/site.webmanifest">
+	<link rel="mask-icon" href="icon/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="apple-mobile-web-app-title" content="CostAAmadi">
+	<meta name="application-name" content="CostAAmadi">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="theme-color" content="#ffffff">
+	<script src="libs\jquery.js"></script>
+	<script src="libs\bootstrap.min.js"></script>
+	<link rel="stylesheet" href="libs\bootstrap.min.css">
 	<link rel="stylesheet" href="css_sito.css">
-
-	<style>
-
-
-	</style>
 </head>
 
 <body>
@@ -65,19 +72,20 @@
 		</div>
 	</div>
 
-	<div class="   sezione-sfondo">
+	<div class="sezione-sfondo">
 
 
 		<div
 			class="container-fluid d-flex  justify-content-center flex-column flex-md-row  p-0 animation fadein_right bg-white ">
 
-			<div class="col-md-4 p-0 ">
-				<img class="img-fluid" src="images/home-page/home.page.bottiglie.jpg" alt="Vini">
+			<div class="div-image col-md-5 p-0" style=" background-image: url(images/home-page/home.page.bottiglie.jpg);">
 			</div>
-			<div class="col-md-8 p-5">
+ 
+			<div class="col-md-7 p-5">
 				<h2 class="text-uppercase p-3">LA SELEZIONE</h2>
 				<p class="p-3">Scopri la nostra esclusiva selezione di vini, prodotti con cura nelle storiche colline di Collalbrigo. <br><br>
-					Ogni bottiglia riflette la passione e l'esperienza della nostra cantina, unendo tradizione e innovazione</p>
+					Ogni bottiglia riflette la passione e l'esperienza della nostra cantina, unendo tradizione e
+					innovazione.</p>
 
 				<a href="vini.html" class="m-3 btn btn-outline-secondary p-2 btn-sm">SCOPRI DI PIÙ</a>
 			</div>
@@ -88,10 +96,9 @@
 		<div
 			class="container-fluid d-flex  justify-content-center flex-column flex-md-row  p-0  animation fadein_left bg-white">
 
-			<div class="col-md-4 p-0 order-md-2">
-				<img class="img-fluid" src="images/home-page/home.page.uva.jpg" alt="Collina del Prosecco">
-			</div>
-			<div class="col-md-8 p-5 order-md-1">
+			<div class="div-image col-md-5 p-0 order-md-2" style=" background-image: url(images/home-page/home.page.uva.jpg);">
+ 			</div>
+			<div class="col-md-7 p-5 order-md-1">
 				<h2 class="text-uppercase p-3">COLLINE DEL PROSECCO</h2>
 				<p class="p-3">
 					Immergiti nella bellezza delle colline del Prosecco, patrimonio dell'umanità UNESCO, dove nasce
@@ -105,11 +112,9 @@
 		<div>&nbsp;</div>
 		<div
 			class="container-fluid d-flex  justify-content-center flex-column flex-md-row  p-0 animation fadein_right bg-white">
-
-			<div class="col-md-4 p-0 ">
-				<img class="img-fluid" src="images/home-page/home.page.carretto.jpg" alt="Giovane Tradizione">
+			<div class="div-image col-md-5 p-0" style=" background-image: url(images/home-page/home.page.carretto.jpg);">
 			</div>
-			<div class="col-md-8 p-5">
+			<div class="col-md-7 p-5">
 				<h2 class="text-uppercase p-3">GIOVANE TRADIZIONE</h2>
 				<p class="p-3">La nostra cantina è un perfetto connubio tra giovinezza e tradizione, dove l'antica
 					saggezza vinicola si sposa con l'innovazione moderna. Rispettiamo e onoriamo le tecniche
