--- a/territorio.html
+++ b/territorio.html
@@ -3,22 +3,33 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta http-equiv="content-language" content="it">
+	<meta name="viewport"
+		content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0, shrink-to-fit=no">
+	<meta name="author" content="xxx" />
+	<meta name="description"
+		content="Costaamadi - Dove la passione per il vino si intreccia con la magia delle colline del prosecco" />
+	<meta property="og:title" content="Costaamadi" />
+	<meta property="og:image" content="images/preview.png" />
 	<title>Costamadi - Colline del Prosecco</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
+	<link rel="apple-touch-icon" sizes="180x180" href="icon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="icon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="icon/favicon-16x16.png">
+	<link rel="manifest" href="icon/site.webmanifest">
+	<link rel="mask-icon" href="icon/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="apple-mobile-web-app-title" content="CostAAmadi">
+	<meta name="application-name" content="CostAAmadi">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="theme-color" content="#ffffff">
+	<script src="libs\jquery.js"></script>
+	<script src="libs\bootstrap.min.js"></script>
+	<link rel="stylesheet" href="libs\bootstrap.min.css">
 	<link rel="stylesheet" href="css_sito.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-
-	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
 </head>
 
 <body>
-
-
 	<!-- Navbar -->
 	<nav class="navbar navbar-expand-lg navbar-light bg-white">
 		<a class="navbar-brand" href="index.html"><img src="images/logo.originale.png" alt="Logo"></a>
@@ -48,25 +59,18 @@
 
 		<!-- Carousel items -->
 		<div class="carousel-inner">
+			<p class="title">VIGNE CHE DANNO VITA</p>
 			<div class="carousel-item active">
-				<img class="d-block w-100" src="images/territorio/territorio.vigneto.jpg" alt="First slide">
-				<div class="carousel-caption d-none d-md-block  w-100">
-					<p class="title">VIGNE CHE DANNO VITA</p>
-				</div>
+				<img class="d-block w-100" src="images/territorio/territorio.1.jpg" alt="First slide">
+
 			</div>
 			<div class="carousel-item">
-				<img class="d-block w-100" src="images/territorio/carousel-2.jpg" alt="Second slide">
-				<div class="carousel-caption d-none d-md-block  w-100">
-					<p class="title">VIGNE CHE DANNO VITA</p>
+				<img class="d-block w-100" src="images/territorio/territorio.2.jpg" alt="Second slide">
 
-				</div>
 			</div>
 			<div class="carousel-item">
-				<img class="d-block w-100" src="images/territorio/carousel-3.jpg" alt="Third slide">
-				<div class="carousel-caption d-none d-md-block  w-100">
-					<p class="title">VIGNE CHE DANNO VITA</p>
+				<img class="d-block w-100" src="images/territorio/territorio.3.jpg" alt="Third slide">
 
-				</div>
 			</div>
 		</div>
 
@@ -95,33 +99,40 @@
 
 
 
-			<div class="row mt-5 bg-white p-0 animation fadein_right">
-				<div class="col-md-4 p-0 m-0 ">
-					<img class="img-fluid mb-0" src="https://dummyimage.com/1000x1000/568/fff" alt="Foto">
+			<div class="row  bg-white p-0 animation fadein_right">
+
+
+				<div class="div-image col-md-5 p-0 m-0 "
+					style=" background-image: url(images/territorio/territorio.paragrafo.jpg);">
+
 				</div>
-				<div class="col-md-8 p-5  ">
+ 
+				<div class="col-md-7 p-5  ">
 					<h2 class="py-3">I VIGNETI COSTAAMADI</h2>
-					<p class="py-3" >Situata sulla suggestiva collina di Collalbrigo, a Conegliano, la società agricola si estende su
+					<p class="py-3">Situata sulla suggestiva collina di Collalbrigo, a Conegliano, la società agricola
+						si estende su
 						20 ettari di vigne che incarnano l'essenza del nostro territorio. Dei 20 ettari, ben 16 si
 						trovano nel prestigioso territorio UNESCO, un'area rinomata per la sua bellezza naturale e per
 						la qualità eccezionale delle sue uve.</p>
 					<p>Ogni grappolo qui coltivato è il frutto di un'attenta cura e di una tradizione vinicola che si
 						tramanda da generazioni, riflettendo la passione e la dedizione che mettiamo in ogni fase della
 						produzione.</p>
-					<a target="_blank" href="https://maps.app.goo.gl/trznsQTLfNB7TKUL6" class="btn btn-outline-secondary btn-sm">VIENI A TROVARCI</a>
+					<a target="_blank" href="https://maps.app.goo.gl/trznsQTLfNB7TKUL6"
+						class="btn btn-outline-secondary btn-sm">VIENI A TROVARCI</a>
 				</div>
 			</div>
 
-			<div class="row mt-5 animation fadeIn bg-grey">
+			<div class="row   animation fadeIn bg-grey">
 				<div class="col-md-12">
 					<img class="map" src="images/mappa.png" alt="Mappa">
 				</div>
 			</div>
 			<!--    -->
-			<div class="row mt-5 p-0 animation fadein_left  flex-column-reverse flex-md-row">
-				<div class="col-md-8 px-5  p-5 p-0 p-sm-3 text-right  ">
+			<div class="row   p-0 animation fadein_left  flex-column-reverse flex-md-row">
+				<div class="col-md-7 px-5  p-5 p-0 p-sm-3 text-right  ">
 					<h2 class="py-3">UN BRINDISI DI RAFFINATEZZA, IL NOSTRO PROSECCO DOCG</h2>
-					<p class="py-3">Il Prosecco Conegliano Valdobbiadene DOCG è il gioiello della nostra produzione, un vino
+					<p class="py-3">Il Prosecco Conegliano Valdobbiadene DOCG è il gioiello della nostra produzione, un
+						vino
 						che incarna la perfezione e l'eleganza delle colline del Prosecco UNESCO. Nato da uve
 						selezionate e coltivate con amore e dedizione, il nostro Prosecco si distingue per la sua
 						freschezza, le bollicine delicate e i sentori fruttati e floreali che evocano la bellezza del
@@ -129,11 +140,13 @@
 					<p>Ogni sorso racconta la passione e la tradizione che animano Costaamadi, trasportando chi lo
 						assapora in un viaggio sensoriale unico.</p>
 				</div>
-				<div class="col-md-4 p-0 m-0 ">
-					<img class="img-fluid " src="images/territorio/territorio.vite.jpg" alt="Foto">
+
+				<div class="div-image col-md-5 p-0 m-0 "
+					style=" background-image: url(images/territorio/territorio.vite.jpg);">
+
+
 				</div>
 			</div>
-		</div>
 	</section>
 
 
