--- a/vini.html
+++ b/vini.html
@@ -3,17 +3,31 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta http-equiv="content-language" content="it">
+	<meta name="viewport"
+		content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0, shrink-to-fit=no">
+	<meta name="author" content="xxx" />
+	<meta name="description"
+		content="Costaamadi - Dove la passione per il vino si intreccia con la magia delle colline del prosecco" />
+	<meta property="og:title" content="Costaamadi" />
+	<meta property="og:image" content="images/preview.png" />
 	<title>Costamadi</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+	
+	<link rel="apple-touch-icon" sizes="180x180" href="icon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="icon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="icon/favicon-16x16.png">
+	<link rel="manifest" href="icon/site.webmanifest">
+	<link rel="mask-icon" href="icon/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="apple-mobile-web-app-title" content="CostAAmadi">
+	<meta name="application-name" content="CostAAmadi">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="theme-color" content="#ffffff">
 
+	<script src="libs\jquery.js"></script>
+	<script src="libs\bootstrap.min.js"></script>
+	<link rel="stylesheet" href="libs\bootstrap.min.css">
 	<link rel="stylesheet" href="css_sito.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-
-	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
 </head>
 
 <body>
@@ -27,7 +41,7 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav ml-auto  mr-5">
-			<li class="nav-item text-uppercase mr-4"><a class="nav-link active" href="vini.html">Vini</a></li>
+				<li class="nav-item text-uppercase mr-4"><a class="nav-link active" href="vini.html">Vini</a></li>
 				<li class="nav-item text-uppercase mr-4"><a class="nav-link" href="territorio.html">Territorio</a></li>
 				<li class="nav-item text-uppercase mr-4"><a class="nav-link" href="storia.html">Storia</a></li>
 			</ul>
@@ -45,27 +59,19 @@
 
 		<!-- Carousel items -->
 		<div class="carousel-inner">
+			<p class="title">VINI CHE RISVEGLIANO I SENSI</p>
 			<div class="carousel-item active">
 
-				<img class="d-block w-100" src="images/vini/carousel.jpg" alt="First slide">
+				<img class="d-block w-100" src="images/vini/vini.1.jpg" alt="First slide">
 
-				<div class="carousel-caption d-none d-md-block  w-100">
-					<p class="title">VINI CHE RISVEGLIANO I SENSI</p>
-				</div>
 			</div>
 			<div class="carousel-item">
-				<img class="d-block w-100" src="images/vini/carousel-1.jpg" alt="Second slide">
-				<div class="carousel-caption d-none d-md-block  w-100">
-					<p class="title">VINI CHE RISVEGLIANO I SENSI</p>
+				<img class="d-block w-100" src="images/vini/vini.2.jpg" alt="Second slide">
 
-				</div>
 			</div>
 			<div class="carousel-item">
-				<img class="d-block w-100" src="images/vini/carousel-2.jpg" alt="Third slide">
-				<div class="carousel-caption d-none d-md-block  w-100">
-					<p class="title">VINI CHE RISVEGLIANO I SENSI</p>
+				<img class="d-block w-100" src="images/vini/vini.3.jpg" alt="Third slide">
 
-				</div>
 			</div>
 		</div>
 
@@ -89,15 +95,14 @@
 		</div>
 		<div class="row">
 			<div class="col-md-3 col-sm-6 text-center animation fadeIn">
-				<img class="img-fluid" src="images/vini/EXTRA DRY.jpg"
-					alt="Prosecco Superiore EXTRA DRY">
+				<img class="img-fluid" src="images/vini/EXTRA DRY.jpg" alt="Prosecco Superiore EXTRA DRY">
 				<h5 class="product-title px-4">CONEGLIANO VALDOBBIADENE</h5>
-				<p class="product-subtitle"><span class="font-italic"> Superiore</span> <br> EXTRA DRY</p>
+				<p class="product-subtitle"><span class="font-italic"> Superiore</span> <br> DOCG - EXTRA DRY</p>
 			</div>
 			<div class="col-md-3 col-sm-6 text-center animation fadeIn">
 				<img class="img-fluid" src="images/vini/SUR LIE.jpg" alt="Prosecco Sur Lie">
 				<h5 class="product-title px-4">CONEGLIANO VALDOBBIADENE</h5>
-				<p class="product-subtitle"><span class="font-italic">Prosecco Sur Lie </span> <br> DOCG</p>
+				<p class="product-subtitle"><span class="font-italic">Prosecco Sur Lie </span> <br>EXTRA DRY</p>
 			</div>
 			<div class="col-md-3 col-sm-6 text-center animation fadeIn">
 				<img class="img-fluid" src="images/vini/BRUT.jpg" alt="Prosecco Superiore BRUT">
@@ -117,7 +122,7 @@
 			<div class="col-md-3 col-sm-6 text-center animation fadeIn">
 				<img class="img-fluid" src="images/vini/MANZONI.jpg" alt="Incrocio Manzoni">
 				<h5 class="product-title px-4">INCROCIO MANZONI 6.0.13</h5>
-				<p class="product-subtitle"><span class="font-italic">Bianco</span></p>
+				<p class="product-subtitle"><span class="font-italic">Colli Trevigiani</span><br> IGT</p>
 			</div>
 			<div class="col-md-3 col-sm-6 text-center animation fadeIn">
 				<img class="img-fluid" src="images/vini/SPUMANTE.jpg" alt="Spumante di Qualità">
@@ -132,11 +137,18 @@
 		</div>
 	</section>
 
+	<div class="row p-4" id="download-pdf">
+		<div class="container text-center">
+			<a href="pdf/vini.costaamadi.pdf" target="_blank"
+				class="animation fadeIn btn py-2 px-4 btn-outline-primary m-4 btn-lg animate">GUIDA AI NOSTRI VINI</a>
+		</div>
+	</div>
+
 	<!-- Call to Action Section -->
 	<section class="cta-section">
 		<img src="images/AA.png" alt="AA Logo">
 		<p class="title">VUOI SAPERNE DI PIÙ?</p><br>
-		<a href="mailto:soc.agr.costabella@gmail.com" class="btn btn-outline-primary m-4 btn-sm">CONTATTACI</a>
+		<a href="mailto:soc.agr.costabella@gmail.com" class="btn m-4 btn-md">CONTATTACI</a>
 	</section>
 
 
