--- a/storia.html
+++ b/storia.html
@@ -3,18 +3,29 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta http-equiv="content-language" content="it">
+	<meta name="viewport"
+		content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0, shrink-to-fit=no">
+	<meta name="author" content="xxx" />
+	<meta name="description"
+		content="Costaamadi - Dove la passione per il vino si intreccia con la magia delle colline del prosecco" />
+	<meta property="og:title" content="Costaamadi" />
+	<meta property="og:image" content="images/preview.png" />
 	<title>Costamadi - Storia</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
-	<link rel="stylesheet" href="css_sito.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-
-	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-
+	<link rel="apple-touch-icon" sizes="180x180" href="icon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="icon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="icon/favicon-16x16.png">
+	<link rel="manifest" href="icon/site.webmanifest">
+	<link rel="mask-icon" href="icon/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="apple-mobile-web-app-title" content="CostAAmadi">
+	<meta name="application-name" content="CostAAmadi">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="theme-color" content="#ffffff">
+	<script src="libs\jquery.js"></script>
+	<script src="libs\bootstrap.min.js"></script>
+	<link rel="stylesheet" href="libs\bootstrap.min.css">
 	<link rel="stylesheet" href="css_sito.css">
 </head>
 
@@ -49,23 +60,18 @@
 
 		<!-- Carousel items -->
 		<div class="carousel-inner">
+			<p class="title">UNA STORIA DI FAMIGLIA E PASSIONE</p>
 			<div class="carousel-item active">
-				<img class="d-block w-100" src="images/storia/carousel-1.jpg" alt="First slide">
-				<div class="carousel-caption d-none d-md-block  w-100">
-					<p class="title">UNA STORIA DI FAMIGLIA E PASSIONE</p>
-				</div>
+				<img class="d-block w-100" src="images/storia/storia.1.jpg" alt="First slide">
+
 			</div>
 			<div class="carousel-item">
-				<img class="d-block w-100" src="images/storia/carousel-2.jpg" alt="Second slide">
-				<div class="carousel-caption d-none d-md-block  w-100">
-					<p class="title">UNA STORIA DI FAMIGLIA E PASSIONE</p>
-				</div>
+				<img class="d-block w-100" src="images/storia/storia.2.JPG" alt="Second slide">
+
 			</div>
 			<div class="carousel-item">
-				<img class="d-block w-100" src="images/storia/carousel-3.jpg" alt="Third slide">
-				<div class="carousel-caption d-none d-md-block  w-100">
-					<p class="title">UNA STORIA DI FAMIGLIA E PASSIONE</p>
-				</div>
+				<img class="d-block w-100" src="images/storia/storia.3.JPG" alt="Third slide">
+
 			</div>
 		</div>
 
@@ -100,6 +106,8 @@
 
 
 			<div class="row my-4">
+
+				
 				<div class="col-md-6  m-3 animation fadein_left mx-auto pl-md-0 pr-md-5">
 					<img class="img-fluid  " src="images/storia/storia.azienda.bn.jpg" alt="Foto">
 				</div>
@@ -126,8 +134,7 @@
 				<div class="col-md-6 p-4 pl-md-0 pr-md-5  animation fadein_right  ">
 					<div class="row align-items-center ">
 						<div class="col-md-5  col-6">
-							<img class="img-fluid mb-4 mr-5" src="images/storia/storia.adriano.jpg"
-								alt="Foto">
+							<img class="img-fluid mb-4 mr-5" src="images/storia/storia.adriano.jpg" alt="Foto">
 						</div>
 						<div class="col-6 col-md-7 pr-md-0 mr-md-0">
 							<img class="img-fluid  " src="images/storia/storia.bambino.jpg" alt="Foto">
@@ -157,8 +164,7 @@
 				<div class="col-md-6 p-4 pl-md-0 pr-md-5 animation fadein_right">
 					<div class="row align-items-center">
 						<div class="col-6 col-md-5  ">
-							<img class="img-fluid  mr-md-5" src="images/storia/storia.adriano.bn.jpg"
-								alt="Foto">
+							<img class="img-fluid  mr-md-5" src="images/storia/storia.adriano.bn.jpg" alt="Foto">
 						</div>
 						<div class=" col-6 col-md-7 pr-md-0 mr-md-0">
 							<img class="img-fluid  " src="images/storia/storia.azienda.ora.jpg" alt="Foto">
@@ -177,18 +183,18 @@
 			<img src="images/AA.png" alt="AA Logo">
 			<div class="row mt-4 foto-section ">
 				<div class="col-md-4 animation fadeInBlock " style="transition-delay: .1s">
-					<img class="rounded-circle" src="https://dummyimage.com/250x250/1c83ba/fff.jpg" alt="Adriano">
+					<img class="rounded-circle" src="images/storia/adriano.png" alt="Adriano">
 					<h5>ADRIANO</h5>
 				</div>
 				<div class="col-md-4  animation fadeInBlock" style="transition-delay: .2s">
 					<!-- <img class="rounded-circle" src="images/storia/paolo-foto.jpg" alt="Paolo"> -->
-					<img class="rounded-circle" src="https://dummyimage.com/250x250/1c83ba/fff.jpg" alt="Adriano">
+					<img class="rounded-circle" src="images/storia/paolo.png" alt="Paolo">
 
 					<h5>PAOLO</h5>
 				</div>
 				<div class="col-md-4 animation fadeInBlock " style="transition-delay: .3s">
 					<!-- <img class="rounded-circle" src="images/storia/daniela-foto.jpg" alt="Daniela"> -->
-					<img class="rounded-circle" src="https://dummyimage.com/250x250/1c83ba/fff.jpg" alt="Adriano">
+					<img class="rounded-circle" src="images/storia/daniela.png" alt="Daniela">
 
 					<h5>DANIELA</h5>
 				</div>
@@ -202,7 +208,7 @@
 			<div class="row align-items-center">
 				<div class="col-md-4 pb-5 col-sm-12 text-center">
 					<a class="logo" href="index.html"><img src="images/logo.bianco.png" alt="Logo"></a>
-			</div>
+				</div>
 
 				<div class="col-md-4 col-sm-6 ">
 					<h5 class="mb-0 pb-0 titoletto">SOCIETÀ AGRICOLA COSTABELLA</h5>
