--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta http-equiv="content-language" content="it">
-	<meta name="viewport"
-		content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0, shrink-to-fit=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="xxx" />
 	<meta name="description"
-		content="Costaamadi - Dove la passione per il vino si intreccia con la magia delle colline del prosecco" />
+		  content="Costaamadi - Dove la passione per il vino si intreccia con la magia delle colline del prosecco" />
 	<meta property="og:title" content="Costaamadi" />
 	<meta property="og:image" content="images/preview.png" />
 	<title>Costamadi</title>
@@ -23,137 +22,92 @@
 	<meta name="application-name" content="CostAAmadi">
 	<meta name="msapplication-TileColor" content="#ffffff">
 	<meta name="theme-color" content="#ffffff">
-	<script src="libs\jquery.js"></script>
-	<script src="libs\bootstrap.min.js"></script>
-	<link rel="stylesheet" href="libs\bootstrap.min.css">
 	<link rel="stylesheet" href="css_sito.css">
 </head>
 
 <body>
 
-	<!-- Navbar -->
-	<nav class="navbar navbar-expand-lg navbar-light bg-white">
+<!-- Navbar -->
+<nav class="navbar">
+	<div class="navbar-container">
 		<a class="navbar-brand" href="#"><img src="images/logo.originale.png" alt="Logo"></a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-			aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
+		<button class="navbar-toggler" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon">&#9776;</span>
 		</button>
-		<div class="collapse navbar-collapse" id="navbarNav">
-			<ul class="navbar-nav ml-auto  mr-5">
-				<li class="nav-item text-uppercase mr-4"><a class="nav-link" href="vini.html">Vini</a></li>
-				<li class="nav-item text-uppercase mr-4"><a class="nav-link" href="territorio.html">Territorio</a></li>
-				<li class="nav-item text-uppercase mr-4"><a class="nav-link" href="storia.html">Storia</a></li>
-			</ul>
-		</div>
-	</nav>
+		<ul class="navbar-nav">
+			<li class="nav-item"><a class="nav-link" href="vini.html">Vini</a></li>
+			<li class="nav-item"><a class="nav-link" href="territorio.html">Territorio</a></li>
+			<li class="nav-item"><a class="nav-link" href="storia.html">Storia</a></li>
+		</ul>
+	</div>
+</nav>
 
-	<!-- Hero Section -->
-	<div class="hero-section">
-		<div class="container-fluid">
-			<div class="row justify-content-center flex-column-reverse flex-md-row">
-				<div class="col-md-4 py-5  d-flex flex-column  ">
-					<h1 class="px-3">DOVE LA PASSIONE PER IL VINO SI INTRECCIA CON LA MAGIA DELLE COLLINE DEL PROSECCO
-					</h1>
-					<a href="territorio.html" class="btn btn-md m-5 mt-4">SCOPRI DI PIÙ</a>
-				</div>
-				<div class="col-md-8 p-0  m-0 ">
-					<img class=" " src="images/home-page/home.page.casa.jpg" alt="Collina">
-				</div>
-			</div>
+<!-- Hero Section -->
+<section class="hero-section">
+	<div class="hero-content">
+		<h1>DOVE LA PASSIONE PER IL VINO SI INTRECCIA CON LA MAGIA DELLE COLLINE DEL PROSECCO</h1>
+		<a href="territorio.html" class="btn">SCOPRI DI PIÙ</a>
+	</div>
+	<img src="images/home-page/home.page.casa.jpg" alt="Collina" class="hero-image">
+</section>
+
+<!-- Info Section -->
+<section class="info-section">
+	<img src="images/simboli.png" alt="Icons" class="info-image">
+	<p>Dal cuore della tradizione, un brindisi alla vita e alla bellezza della natura</p>
+</section>
+
+<!-- Content Section -->
+<section class="content-section">
+	<div class="content-block">
+		<div class="content-image" style="background-image: url('images/home-page/home.page.bottiglie.jpg');"></div>
+		<div class="content-text">
+			<h2>LA SELEZIONE</h2>
+			<p>Scopri la nostra esclusiva selezione di vini, prodotti con cura nelle storiche colline di Collalbrigo. Ogni bottiglia riflette la passione e l'esperienza della nostra cantina, unendo tradizione e innovazione.</p>
+			<a href="vini.html" class="btn-outline">SCOPRI DI PIÙ</a>
 		</div>
 	</div>
 
-	<!-- Info Section -->
-	<div class="info-section ">
-		<div class="container">
-			<img class="animation fadeIn" src="images/simboli.png" alt="Icons">
-			<p class="py-3 pb-4" style="transition-delay: 0.1s;">Dal cuore della tradizione, un brindisi
-				alla vita e alla bellezza della natura</p>
+	<div class="content-block reverse">
+		<div class="content-image" style="background-image: url('images/home-page/home.page.uva.jpg');"></div>
+		<div class="content-text">
+			<h2>COLLINE DEL PROSECCO</h2>
+			<p>Immergiti nella bellezza delle colline del Prosecco, patrimonio dell'umanità UNESCO, dove nasce la magia dei nostri vini. Scopri il terroir unico che dona ai nostri vini la loro inconfondibile freschezza e vivacità.</p>
+			<a href="territorio.html" class="btn-outline">SCOPRI DI PIÙ</a>
 		</div>
 	</div>
 
-	<div class="sezione-sfondo">
-
-
-		<div
-			class="container-fluid d-flex  justify-content-center flex-column flex-md-row  p-0 animation fadein_right bg-white ">
-
-			<div class="div-image col-md-5 p-0" style=" background-image: url(images/home-page/home.page.bottiglie.jpg);">
-			</div>
- 
-			<div class="col-md-7 p-5">
-				<h2 class="text-uppercase p-3">LA SELEZIONE</h2>
-				<p class="p-3">Scopri la nostra esclusiva selezione di vini, prodotti con cura nelle storiche colline di Collalbrigo. <br><br>
-					Ogni bottiglia riflette la passione e l'esperienza della nostra cantina, unendo tradizione e
-					innovazione.</p>
-
-				<a href="vini.html" class="m-3 btn btn-outline-secondary p-2 btn-sm">SCOPRI DI PIÙ</a>
-			</div>
-		</div>
-		<div>&nbsp;</div>
-
-
-		<div
-			class="container-fluid d-flex  justify-content-center flex-column flex-md-row  p-0  animation fadein_left bg-white">
-
-			<div class="div-image col-md-5 p-0 order-md-2" style=" background-image: url(images/home-page/home.page.uva.jpg);">
- 			</div>
-			<div class="col-md-7 p-5 order-md-1">
-				<h2 class="text-uppercase p-3">COLLINE DEL PROSECCO</h2>
-				<p class="p-3">
-					Immergiti nella bellezza delle colline del Prosecco, patrimonio dell'umanità UNESCO, dove nasce
-					la magia dei nostri vini. Scopri il terroir unico che dona ai nostri vini la loro inconfondibile
-					freschezza e vivacità. Attraverso immagini e storie, ti porteremo in un viaggio tra le nostre
-					vigne, facendoti vivere l'autenticità e la tradizione di questa terra incantata.</p>
-				<a href="territorio.html" class="m-3 p-2 btn btn-outline-secondary btn-sm">SCOPRI DI PIÙ</a>
-			</div>
-		</div>
-
-		<div>&nbsp;</div>
-		<div
-			class="container-fluid d-flex  justify-content-center flex-column flex-md-row  p-0 animation fadein_right bg-white">
-			<div class="div-image col-md-5 p-0" style=" background-image: url(images/home-page/home.page.carretto.jpg);">
-			</div>
-			<div class="col-md-7 p-5">
-				<h2 class="text-uppercase p-3">GIOVANE TRADIZIONE</h2>
-				<p class="p-3">La nostra cantina è un perfetto connubio tra giovinezza e tradizione, dove l'antica
-					saggezza vinicola si sposa con l'innovazione moderna. Rispettiamo e onoriamo le tecniche
-					tradizionali tramandate dai nostri antenati, adattandole alle esigenze contemporanee senza mai
-					perdere di vista l'autenticità e la qualità e il rispetto per la nostra terra.</p>
-				<a href="storia.html" class="m-3  p-2 btn btn-outline-secondary btn-sm">SCOPRI DI PIÙ</a>
-			</div>
+	<div class="content-block">
+		<div class="content-image" style="background-image: url('images/home-page/home.page.carretto.jpg');"></div>
+		<div class="content-text">
+			<h2>GIOVANE TRADIZIONE</h2>
+			<p>La nostra cantina è un perfetto connubio tra giovinezza e tradizione, dove l'antica saggezza vinicola si sposa con l'innovazione moderna. Rispettiamo e onoriamo le tecniche tradizionali tramandate dai nostri antenati.</p>
+			<a href="storia.html" class="btn-outline">SCOPRI DI PIÙ</a>
 		</div>
 	</div>
+</section>
 
-
-	<!-- Footer -->
-	<footer class="footer py-5 pb-3">
-		<div class="container-fluid ">
-			<div class="row align-items-center">
-				<div class="col-md-4 pb-5 col-sm-12 text-center">
-					<a class="logo" href="index.html"><img src="images/logo.bianco.png" alt="Logo"></a>
-				</div>
-
-				<div class="col-md-4 col-sm-6 ">
-					<h5 class="mb-0 pb-0 titoletto">SOCIETÀ AGRICOLA COSTABELLA</h5>
-					<p class="my-1 py-0">di Amadio Adriano e Amadio Paolo s.s.</p>
-					<div class="underline"></div>
-					<p>Via Michele Giunti 27, <br> 31015 Conegliano TV </p>
-					<p>P.IVA 04357000266</p>
-				</div>
-				<div class="col-md-4 col-sm-6  ">
-					<h5 class="titoletto my-1 py-0">CONTATTI</h5>
-					<div class="underline"></div>
-					<p>Tel: +39 0438 62405 <br> Email:
-						<a href="mailto:soc.agr.costabella@gmail.com">soc.agr.costabella@gmail.com</a>
-					</p>
-				</div>
-			</div>
+<!-- Footer -->
+<footer class="footer">
+	<div class="footer-container">
+		<div class="footer-logo">
+			<a href="index.html"><img src="images/logo.bianco.png" alt="Logo"></a>
 		</div>
-	</footer>
+		<div class="footer-info">
+			<h5>SOCIETÀ AGRICOLA COSTABELLA</h5>
+			<p>di Amadio Adriano e Amadio Paolo s.s.</p>
+			<p>Via Michele Giunti 27, 31015 Conegliano TV</p>
+			<p>P.IVA 04357000266</p>
+		</div>
+		<div class="footer-contact">
+			<h5>CONTATTI</h5>
+			<p>Tel: +39 0438 62405</p>
+			<p>Email: <a href="mailto:soc.agr.costabella@gmail.com">soc.agr.costabella@gmail.com</a></p>
+		</div>
+	</div>
+</footer>
 
-	<script src="script_animation.js"></script>
-
+<script src="script_animation.js"></script>
 </body>
 
 </html>
